--- a/MyAndroidFrame/res/values/strings.xml
+++ b/MyAndroidFrame/res/values/strings.xml
@@ -4,5 +4,8 @@
     <string name="app_name">MyAndroidFrame</string>
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
-
+	<string name="pull_to_refresh_pull_label">下拉可以刷新</string>
+    <string name="pull_to_refresh_release_label">松开可以刷新</string>
+    <string name="pull_to_refresh_refreshing_label">加载中...</string>
+    <string name="pull_to_refresh_tap_label">下拉可以刷新</string>
 </resources>
