Signed-off-by: John Guo <guoyuanzhuang@gmail.com>

--- a/MyAndroidFrame/res/values/strings.xml
+++ b/MyAndroidFrame/res/values/strings.xml
@@ -8,4 +8,6 @@
     <string name="pull_to_refresh_release_label">松开可以刷新</string>
     <string name="pull_to_refresh_refreshing_label">加载中...</string>
     <string name="pull_to_refresh_tap_label">下拉可以刷新</string>
+    <string name="networkexc_retry">重试</string>
+    <string name="networkexc_setting">设置</string>
 </resources>
